--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
     environment:
       # Customize the JVM maximum heap limit
       MAVEN_OPTS: -Xmx3200m
-      CODECOV_TOKEN: 'b9e2275b-85de-440e-a6f5-0e43ec6d9d11
+      CODECOV_TOKEN: 'b9e2275b-85de-440e-a6f5-0e43ec6d9d11'
 
     steps:
       - checkout
